# NativeSleep_1C

./: .gitignore  README.md  Readme.md  Thumbs.db
NativeAPI/: AddInNative.cpp  AddInNative.h  AddInNative.vcxproj  AddInNative.vcxproj.filters  Utils.cpp  Utils.h  dllmain.cpp
example/: AddIn.sln  CMakeLists.txt  MANIFEST.XML  install_host.sh
example/NativeAPI/: AddInNative.vcxproj  AddInNative.vcxproj.filters  AddInNativeSleep.cpp  AddInNativeSleep.h
